# xadrez-paradigmas

./: CHANGELOG.md  README.md  package.yaml  stack.yaml  xadrez-paradigmas.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
src/: AI.hs  Check.hs  CheckMate.hs  Gui.hs  ProcessarMovimento.hs  Tabuleiro.hs  Utils.hs  ValidacaoMovimento.hs
test/: Spec.hs
