cabal-version: 2.2

name:           xadrez-paradigmas
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/xadrez-paradigmas#readme>
homepage:       https://github.com/githubuser/xadrez-paradigmas#readme
bug-reports:    https://github.com/githubuser/xadrez-paradigmas/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2024 Author name here
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/githubuser/xadrez-paradigmas

library
  exposed-modules:
      Check
      CheckMate
      Gui
      ProcessarMovimento
      Tabuleiro
      Utils
      ValidacaoMovimento
  other-modules:
      Paths_xadrez_paradigmas
  autogen-modules:
      Paths_xadrez_paradigmas
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , gloss
    , gloss-juicy
  default-language: Haskell2010

executable xadrez-paradigmas-exe
  main-is: Main.hs
  other-modules:
      Paths_xadrez_paradigmas
  autogen-modules:
      Paths_xadrez_paradigmas
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , gloss
    , gloss-juicy
    , xadrez-paradigmas
  default-language: Haskell2010

test-suite xadrez-paradigmas-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_xadrez_paradigmas
  autogen-modules:
      Paths_xadrez_paradigmas
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , gloss
    , gloss-juicy
    , xadrez-paradigmas
  default-language: Haskell2010
